# obstacle_traversal_benchmark

./: LICENSE  README.md
obstacle_traversal_benchmark/: CMakeLists.txt  package.xml
obstacle_traversal_benchmark/config/: ahg_obstacle_parcours_config.yaml  ahg_stairs_config.yaml  contact_estimation_config.yaml  obstacle_parcour_config.yaml  pallet_parcours_config.yaml  pallet_parcours_hard_1_config.yaml  pallet_parcours_hard_2_config.yaml  robocup_bordeaux_crossing_ramps_config.yaml  robocup_bordeaux_pallet_hurdles_config.yaml  todolab_test_config.yaml
obstacle_traversal_benchmark/include/obstacle_traversal_benchmark/: bag_reader.h  checkpoint.h  imu_datapoint.h  obstacle_traversal_benchmark.h  stability_datapoint.h  trial.h  types.h  util.cpp  util.h
obstacle_traversal_benchmark/launch/: benchmark_asterix.launch  benchmark_onix.launch  benchmark_telemax.launch  logging_rosbag.launch  logging_rosbag_onix.launch  rviz.launch
obstacle_traversal_benchmark/plotting/notebooks/: traversal_metrics.ipynb
obstacle_traversal_benchmark/rviz/: benchmark.rviz
obstacle_traversal_benchmark/src/: bag_reader.cpp  checkpoint.cpp  obstacle_traversal_benchmark.cpp  obstacle_traversal_benchmark_node.cpp  trial.cpp
