<?xml version="1.0"?>
<package format="2">
  <name>obstacle_traversal_benchmark</name>
  <version>0.0.0</version>
  <description>Evaluation of obstacle traversal approaches.</description>

  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>

  <license>MIT</license>

  <author email="oehler@sim.tu-darmstadt.de">Martin Oehler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>hector_pose_prediction_interface</depend>
  <depend>hector_stability_metrics</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>sdf_contact_estimation</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
</package>
